@@ -1,17 +1,15 @@
 package com.app.sportshubportal.entitites;
 
 import com.app.sportshubportal.roles.Role;
-import com.fasterxml.jackson.annotation.JsonInclude;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import javax.persistence.*;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 @Setter
@@ -27,24 +25,19 @@ public class User implements UserDetails {
     private String email;
     @Enumerated(EnumType.STRING)
     private Role role;
-    @JsonInclude()
-    @Transient
-    private boolean isLogged;
-    private String profilePicture;
+    private String profilePicturePath;
 
-    public User(String username, String password, String email, Role role, boolean isLogged, String profilePicture) {
+    public User(String username, String password, String email, Role role, String profilePicturePath) {
         this.username = username;
         this.password = password;
         this.email = email;
         this.role = role;
-        this.isLogged = isLogged;
-        this.profilePicture = profilePicture;
+        this.profilePicturePath = profilePicturePath;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(role.name());
-        return Collections.singletonList(authority);
+        return List.of(role);
     }
 
     @Override
@@ -54,7 +47,7 @@ public class User implements UserDetails {
 
     @Override
     public boolean isAccountNonLocked() {
-        return !isLogged;
+        return true;
     }
 
     @Override
